--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: 'com.apollographql.apollo'
 apply from: 'dependencies.gradle'
 
 android {
@@ -23,6 +24,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
     buildTypes.each {
         it.buildConfigField 'String', 'ENDPOINT', baseUrl
@@ -34,6 +39,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+}
+
+apollo {
+    generateKotlinModels.set(true)
 }
 
 dependencies {
@@ -82,6 +91,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01"
+    // endregion
+
+    // region Apollo
+    implementation "com.apollographql.apollo:apollo-runtime:2.5.10"
+    implementation "com.apollographql.apollo:apollo-coroutines-support:2.5.10"
     // endregion
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
