fix and add new graphql endpoint schema

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ apply plugin: 'com.apollographql.apollo'
 apply from: 'dependencies.gradle'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "kpfu.itis.petproject"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -31,6 +31,7 @@ android {
     }
     buildTypes.each {
         it.buildConfigField 'String', 'ENDPOINT', baseUrl
+        it.buildConfigField 'String', 'ENDPOINT_JOB', baseUrlJob
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
