--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 # Base URL
 baseUrl="https://rickandmortyapi.com/api/"
+baseUrlJob="https://api.graphql.jobs/"
