--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,142 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+references:
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  cache_key: &cache_key
+    key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+
+  restore_cache: &restore_cache
+    restore_cache:
+      <<: *cache_key
+
+  save_cache: &save_cache
+    save_cache:
+      <<: *cache_key
+      paths:
+        - ~/.gradle
+        - ~/.m2
+
+  workspace: &workspace
+               ~/workspace
+
+  chmod_permissions: &chmod_permissions
+    run:
+      name: Chmod permissions
+      command: sudo chmod +x ./gradlew
+
+  attach_release_workspace: &attach_release_workspace
+    attach_workspace:
+      at: *workspace
+
+  android_config: &android_config
+    working_directory: *workspace
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: circleci/android:api-30
+    environment:
+      TERM: dumb
+      JAVA_OPTIONS: "-Xmx3200m -XX:+UnlockExperimentalVMOptions -XX:ParallelGCThreads=2 -XX:ConcGCThreads=2 -XX:ParallelGCThreads=2 -Djava.util.concurrent.ForkJoinPool.common.parallelism=2"
+      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx3200m" -Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2 -Dkotlin.incremental=false -Dorg.gradle.caching=false -DokHttp.connectTimeout=60 -DokHttp.readTimeout=60'
+
+jobs:
+  dependencies:
+    <<: *android_config
     steps:
       - checkout
+      - *restore_cache
+      - *chmod_permissions
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - *save_cache
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+  detekt:
+    <<: *android_config
+    steps:
+      - checkout
+      - *restore_cache
+      - *chmod_permissions
+      - run:
+          name: Run Detekt
+          command: ./gradlew detekt
+      - store_artifacts:
+          path: app/build/reports/
+          destination: /reports/
+
+  linter:
+    <<: *android_config
+    steps:
+      - checkout
+      - *restore_cache
+      - *chmod_permissions
+      - run:
+          name: Run linter
+          command: ./gradlew lint
+      - store_artifacts:
+          path: app/build/reports/
+          destination: /reports/
+
+  deploy_staging:
+    <<: *android_config
+    steps:
+      - *attach_release_workspace
+      - *restore_cache
+      - run:
+          name: Build Staging Release Apk
+          command: ./gradlew assembleRelease --profile
+      - run:
+          name: Deploy Staging to Firebase App Distribution
+          command: ./gradlew appDistributionUploadStagingRelease
+      - store_artifacts:
+          path: app/build/outputs/apk/
+          destination: /apk/
+      - store_artifacts:
+          path: build/reports/profile/
+          destination: /profile/
+
+  deploy_production:
+    <<: *android_config
+    steps:
+      - *attach_release_workspace
+      - *restore_cache
+      - run:
+          name: Build and publish Production Release bundle
+          command: ./gradlew publishProductionReleaseBundle --profile
+      - store_artifacts:
+          path: app/build/outputs/apk/
+          destination: /apk/
+      - store_artifacts:
+          path: app/build/outputs/bundle/
+          destination: /bundle/
+      - store_artifacts:
+          path: build/reports/profile/
+          destination: /profile/
+
 workflows:
-  say-hello-workflow:
+  version: 2
+  workflow:
     jobs:
-      - say-hello
+      - dependencies:
+          filters:
+            tags:
+              only: /^.*/
+      - linter:
+          requires:
+            - dependencies
+          filters:
+            tags:
+              only: /^.*/
+      - deploy_staging:
+          filters:
+            tags:
+              only: /^v\d+[.]\d+[.]\d+(-staging){0,1}$/
+            branches:
+              ignore: /^.*/
+          requires:
+            - linter
+      - deploy_production:
+          filters:
+            tags:
+              only: /^v\d+[.]\d+[.]\d+$/
+            branches:
+              ignore: /^.*/
+          requires:
+            - linter
