--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,14 +18,22 @@ references:
   workspace: &workspace
                ~/workspace
 
-  chmod_permissions: &chmod_permissions
-    run:
-      name: Chmod permissions
-      command: sudo chmod +x ./gradlew
-
   attach_release_workspace: &attach_release_workspace
     attach_workspace:
       at: *workspace
+
+  persist_release_workspace: &persist_release_workspace
+    persist_to_workspace:
+      root: *workspace
+      paths:
+        - .
+
+  disable_pre_dexing: &disable_pre_dexing
+    run:
+      name: Disable Android pre dexing
+      command: |
+        mkdir -p ~/.gradle
+        cp .circleci/init.gradle ~/.gradle/init.gradle
 
   android_config: &android_config
     working_directory: *workspace
@@ -42,34 +50,36 @@ jobs:
     steps:
       - checkout
       - *restore_cache
-      - *chmod_permissions
+      - *disable_pre_dexing
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
       - *save_cache
+      - *persist_release_workspace
 
-  detekt:
+  check_style:
     <<: *android_config
     steps:
-      - checkout
+      - *attach_release_workspace
       - *restore_cache
-      - *chmod_permissions
       - run:
-          name: Run Detekt
-          command: ./gradlew detekt
+          name: Run Checkstyle
+          command: ./gradlew detektAll
       - store_artifacts:
           path: app/build/reports/
           destination: /reports/
+      - store_artifacts:
+          path: app/build/outputs/gnag
+          destination: /reports-gnag/
 
   linter:
     <<: *android_config
     steps:
-      - checkout
+      - *attach_release_workspace
       - *restore_cache
-      - *chmod_permissions
       - run:
           name: Run linter
-          command: ./gradlew lint
+          command: ./gradlew lintProductionRelease
       - store_artifacts:
           path: app/build/reports/
           destination: /reports/
@@ -81,7 +91,7 @@ jobs:
       - *restore_cache
       - run:
           name: Build Staging Release Apk
-          command: ./gradlew assembleRelease --profile
+          command: ./gradlew assembleStagingRelease --profile
       - run:
           name: Deploy Staging to Firebase App Distribution
           command: ./gradlew appDistributionUploadStagingRelease
