--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,5 @@ local.properties
 .idea/
 app/libs/
 
-secrets/keystore.properties
 secrets/google-play-key.json
-secrets/google-services.json.json
+secrets/google-services.json
