--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 
 plugins {
     id "com.github.triplet.play" version "2.2.1"
+    id "io.gitlab.arturbosch.detekt" version "1.16.0"
 }
 
 allprojects {
