--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,20 +26,22 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     composeOptions {
-        kotlinCompilerExtensionVersion "1.1.1"
+        kotlinCompilerExtensionVersion "1.0.1"
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
 
     buildFeatures {
         viewBinding true
+        compose true
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -67,15 +69,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
 
     // region Compose
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation "androidx.compose.ui:ui:1.1.1"
-    implementation "androidx.compose.ui:ui-tooling:1.1.1"
-    implementation "androidx.compose.foundation:foundation:1.1.1"
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation "androidx.compose.material:material-icons-core:1.1.1"
-    implementation "androidx.compose.material:material-icons-extended:1.1.1"
-    implementation "com.google.android.material:compose-theme-adapter:1.1.1"
+    implementation "androidx.compose.ui:ui:1.0.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.0.1"
+    implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+    implementation "androidx.navigation:navigation-compose:2.4.2"
+    implementation 'androidx.compose.material:material:1.1.1'
     // endregion
 
     testImplementation 'junit:junit:4.+'
